--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Skills"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+        <activity
+            android:name=".Skills"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".SelfProfile"></activity>
     </application>
 
 </manifest>
