--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.coins.black.main_menu">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,7 +26,8 @@
         <activity android:name=".SelfProfile" />
         <activity android:name=".Shop" />
         <activity android:name=".Setting" />
-        <activity android:name=".JoiningRoom"></activity>
+        <activity android:name=".JoiningRoom" />
+        <activity android:name=".Signup"></activity>
     </application>
 
 </manifest>
